Resolve spacing issues on mobile with category-header.

--- a/src/patterns/category-header/_category-header.scss
+++ b/src/patterns/category-header/_category-header.scss
@@ -54,12 +54,6 @@
 
   #category-header h2 {
     display: block;
-    margin-right: -15px;
-    padding-bottom: 30px;
-  }
-
-  #category-header h2:after{
-    display: none;
   }
 
 }
